--- a/config/config.env
+++ b/config/config.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb://0.0.0.0:27017/Food_donation
+MONGO_URI = mongodb+srv://mk2820718:nsR3PQdlcRKqtrFT@food-donation.ykdp0n3.mongodb.net/?retryWrites=true&w=majority
